# symgen

./: .gitignore  Makefile  README.md  pyproject.toml
symgen/: __init__.py  assembly.py  bitset.h  compilation.py  expression.py  generator.py  lib.py  machine.py  operation.py  pcg32.h  stable.h  sym_eval.template.c  sym_gen.template.c  symgen.h
symgen/grammars/: __init__.py  scale.py
tests/: test_bitset  test_eval.py  test_gen.py  test_ops.py  test_stable_grammar.py
