# pyproject.toml

[build-system]
requires      = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'symgen'
version = '0.0.1'
description = 'A fast and configurable interpreter for evaluating and generating symbolic expressions'
readme = {file = 'README.md', content-type = 'text/markdown'}
authors = [{ name = 'Maxim Borisyak', email = 'maximus.been@gmail.com' }]
license = { file = 'LICENSE' }
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = ['jax', 'machine learning']
dependencies = [
    'numpy>=1.25.0',
]
requires-python = '>=3.9'

[project.optional-dependencies]
dev = [
    'pytest>=5.3.2',
]

[project.urls]
Homepage = 'https://github.com/mborisyak/symgen'

[tool.setuptools.packages.find]
exclude = ['contrib', 'examples', 'docs', 'tests']
